29/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  containers:
  - name: frontend
    image: kubernetesway/web:v1
    ports:
    - containerPort: 80
